# forti_decrypt

./: .gitignore  FORTIDLP_ENCRYPTION.md  README.md  forti_decrypt.py  pyproject.toml
tests/: create_fixtures.py  test_decrypt.py
tests/fixtures/: test.evidence  test_key.pem
