[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "forti-decrypt"
version = "0.1.0"
description = "Decrypt FortiDLP (age.reveal.avasecurity.com/v1) evidence files"
requires-python = ">=3.8"
dependencies = ["cryptography"]

[project.scripts]
forti-decrypt = "forti_decrypt:main"

[tool.setuptools]
py-modules = ["forti_decrypt"]
